# AliceVision

./: INSTALL.md
.github/workflows/: continuous-integration.yml
docker/: Dockerfile_rocky  Dockerfile_rocky_deps  build-all.sh  build-rocky.sh  build-ubuntu.sh  check-cpu.sh
pyTests/camera/: test_equidistant.py  test_pinhole.py  test_undistortion_3de.py  test_undistortion_radial.py
pyTests/sfmData/: test_sfmdata.py
src/: CMakeLists.txt
src/aliceVision/: aliceVision.i
src/aliceVision/camera/: Equidistant.cpp  Equidistant.hpp  Equidistant.i  IntrinsicBase.cpp  IntrinsicBase.hpp  IntrinsicBase.i  IntrinsicScaleOffset.cpp  IntrinsicScaleOffset.hpp  IntrinsicScaleOffset.i  IntrinsicScaleOffsetDisto.cpp  IntrinsicScaleOffsetDisto.hpp  IntrinsicScaleOffsetDisto.i  Pinhole.cpp  Pinhole.hpp  Pinhole.i  equidistant_test.cpp  pinholeBrown_test.cpp  pinholeFisheye1_test.cpp  pinholeFisheye_test.cpp  pinholeRadial_test.cpp
src/aliceVision/localization/: rigResection_test.cpp
src/aliceVision/mesh/: MeshIntersection.cpp
src/aliceVision/multiview/: essential.cpp
src/aliceVision/multiview/rotationAveraging/: l1.cpp
src/aliceVision/mvsUtils/: MultiViewParams.cpp
src/aliceVision/numeric/: CMakeLists.txt  numeric.hpp  numeric.i
src/aliceVision/panorama/: coordinatesMap.cpp  remapBbox.cpp
src/aliceVision/rig/: Rig.cpp
src/aliceVision/sensorDB/: cameraSensors.db
src/aliceVision/sfm/: CMakeLists.txt  generateReport.cpp  sfmStatistics.hpp
src/aliceVision/sfmData/: CameraPose.hpp  SfMData.cpp  SfMData.hpp
src/aliceVision/sfmDataIO/: AlembicExporter.cpp  AlembicImporter.cpp  jsonIO.hpp  sfmDataIO.hpp
src/cmake/: Dependencies.cmake  Helpers.cmake
src/software/export/: main_exportAnimatedCamera.cpp  main_exportMatlab.cpp
src/software/pipeline/: CMakeLists.txt  main_globalRotationEstimating.cpp  main_incrementalSfM.cpp  main_meshing.cpp  main_nodalSfM.cpp  main_panoramaWarping.cpp  main_sfmBootstraping.cpp  main_sfmExpanding.cpp
src/software/utils/: CMakeLists.txt  main_imageProcessing.cpp  main_sfmColorizing.cpp  main_sfmFilter.cpp  main_sfmPoseInjecting.cpp  main_sfmRegression.cpp  main_sfmTransfer.cpp  precisionEvaluationToGt.hpp
(+26 files in other folders)
